# prorata

./: Auto_Strainer_v4.docx  CMakeLists.txt  ProjectHome.md  UsersManual.md  autostrainer.py
Combine/: .cproject  .project  DriverCombine.cpp  Makefile  projectInfo.cpp  projectInfo.h  proteinCombined.cpp  proteinDirectComparison.cpp  proteinDirectComparison.h  proteinIndirectComparison.cpp  proteinReplicate.cpp  proteinReplicate.h
apple/: .cproject  .project
apple/doc/: ProRata 1.1 upgrades.txt
apple/include/: msData.h  mzReader.h  proRataConfig.h  proRataParameters.h  projectInfo.h  proteinDirectComparison.h  proteinInfo.h  sicInfo.h
blueberry/: .cproject  .project
blueberry/doc/: ProRataCombine.xml  ProRataConfig.xml  ProRataConfig_LabelFree.xml  SiproConfig.15Nlabeled.cfg  SiproConfig.Unlabeled.cfg
blueberry/src/: Makefile
branches/autostrainer/: main.cpp
cpp/solver/: Makefile  MyTMINLP.cpp  MyTMINLP2.cpp  MyTMINLP2.hpp  main.cpp  readmatrix.cpp  readmatrix.h  tokenvector.h
distro/ProRata/: Readme.txt
include/: getopt.h  peptideInfo.h  ramp.h  sicReaderHelper.h
scripts/ROC/: FDR.py  ROC.py
scripts/decomposition/: decomposition.py
scripts/decoy/: decoy_db.py  decoy_pubchem.py
scripts/evaluation/: evaluate_metfrag.py
scripts/extract/: ExtractBiocyc.py  ExtractBiocyc_stable.py  ExtractBiocyc_standard.py  ExtractMS2.py  ExtractMassBankUnique.py  ExtractMassBank_stable.py
scripts/filter/: filterMassBank.py  split_case.py
scripts/maspect/: scoring_C.py
scripts/merge/: merge_filter.py  (+1 more)
wiki/: PageName.wiki  UsersManual.wiki
(+395 files in other folders)
